--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <body>
         <script src="//unpkg.com/d3"></script>
         <script src="main.js"></script>
+        <div>
+            <button onclick="darkmode()">切換暗黑模式</button>
+        </div>
     </body>
 </html>>
