--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <script src="//unpkg.com/d3"></script>
-        <script src="main.js"></script>
+        <div class="bar-chart-cotainer"></div>
+        <div class="controls">
+            <button data-name="pop">Pop</button>
+            <button data-name="genre">Genre</button>
+            <button data-name="artist">Artist</button>
+        </div>
         <div>
             <button onclick="darkmode()">切換暗黑模式</button>
         </div>
+        <script src="//unpkg.com/d3"></script>
+        <script src="main.js"></script>
     </body>
 </html>>
