--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <h1>資料視覺化--第一組</h1>
         <div class="bar-chart-container">
+            <div class="nav-bar">
+                <ul>
+                    <li><a href = "#artist">Artist</a></li>
+                    <li><a href = "#pop"><button  data-name="pop">Popularity</button></a></li>
+                    <li><a href = "#genre"><button  data-name="genre">Genre</button></a></li>
+                    <li><a href = "#darkmode"><button onclick="darkmode()">切換暗黑模式</button></a></li>
+                </ul>
+            </div>
             <div class="tooltip">
                 <div class="tip-header">
                     <h3></h3>
@@ -15,14 +24,6 @@
                 </div>
             <script src="//unpkg.com/d3"></script>
             <script src="main.js"></script>
-                <div>
-                    <ul>
-                        <li><a href = "#artist">Artist</a></li>
-                        <li><a href = "#pop"><button  data-name="pop">Popularity</button></a></li>
-                        <li><a href = "#genre"><button  data-name="genre">Genre</button></a></li>
-                        <li><a href = "#darkmode"><button onclick="darkmode()">切換暗黑模式</button></a></li>
-                    </ul>
-                </div>
             </div>
         </div>
     </body>
