--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <button data-name="artist">Artist</button>
         </div>
         <div>
-            <button onclick="darkmode()">切換暗黑模式</button>
+            <button data-name="dark" onclick="darkmode()">切換暗黑模式</button>
         <h1>資料視覺化--第一組</h1>
         <div class="bar-chart-container">
             <div class="nav-bar">
