--- a/index.html
+++ b/index.html
@@ -7,34 +7,33 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="bar-chart-cotainer"></div>
-        <div class="controls">
-            <button data-name="pop">Pop</button>
-            <button data-name="genre">Genre</button>
-            <button data-name="artist">Artist</button>
-        </div>
-        <div>
-            <button data-name="dark" onclick="darkmode()">切換暗黑模式</button>
-        <h1>資料視覺化--第一組</h1>
-        <div class="bar-chart-container">
-            <div class="nav-bar">
+        <p>資料視覺化--第一組</p>
+        <div class="setup">
+            <div class="controls">   
                 <ul>
-                    <li><a href = "#artist">Artist</a></li>
                     <li><a href = "#pop"><button  data-name="pop">Popularity</button></a></li>
                     <li><a href = "#genre"><button  data-name="genre">Genre</button></a></li>
-                    <li><a href = "#darkmode"><button onclick="darkmode()">切換暗黑模式</button></a></li>
+                    <li><a href = "#artist"><button  data-name="artist">Artist</button></a></li>
+                    <li><a href = "#darkmode"><button data-name="dark" onclick="darkmode()">切換暗黑模式</button></a></li>
                 </ul>
             </div>
+            <div class="bar-chart-cotainer"></div>
+            <!-- <div class="controls">
+                <button data-name="pop">Pop</button>
+                <button data-name="genre">Genre</button>
+                <button data-name="artist">Artist</button>
+            </div>  -->
+        
             <div class="tooltip">
                 <div class="tip-header">
                     <h3></h3>
                     <h4></h4>
                 </div>
-            <script src="//unpkg.com/d3"></script>
-            <script src="main.js"></script>
+                <div class="tip-body"></div>
             </div>
         </div>
-        <script src="//unpkg.com/d3"></script>
-        <script src="main.js"></script>
+            <script src="//unpkg.com/d3"></script>
+            <script src="main.js"></script>
+            
     </body>
-</html>>
+</html>
