--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <h3></h3>
                     <h4></h4>
                 </div>
+                <div class="tip-body"></div>
             <script src="//unpkg.com/d3"></script>
             <script src="main.js"></script>
             </div>
