--- a/index.html
+++ b/index.html
@@ -7,16 +7,26 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <p>資料視覺化--第一組</p>
+        <h1>資料視覺化--第一組</h1>
+        <label class="switch">
+            <input type="checkbox">
+            <span class="slider round" data-name="dark" onclick="darkmode()"></span>   
+        </label>
         <div class="setup">
-            <div class="controls">   
+            <!-- <div class="controls">   
                 <ul>
                     <li><a href = "#pop"><button  data-name="pop">Popularity</button></a></li>
                     <li><a href = "#genre"><button  data-name="genre">Genre</button></a></li>
                     <li><a href = "#artist"><button  data-name="artist">Artist</button></a></li>
                     <li><a href = "#darkmode"><button data-name="dark" onclick="darkmode()">切換暗黑模式</button></a></li>
                 </ul>
+            </div> -->
+            <div class="controls">   
+                <button  data-name="pop">Popularity</button>
+                <button  data-name="genre">Genre</button>
+                <button  data-name="artist">Artist</button>
             </div>
+
             <div class="bar-chart-cotainer"></div>
             <!-- <div class="controls">
                 <button data-name="pop">Pop</button>
