--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>資料視覺化--第一組</h1>
+        <img src="./images/spotify.jpg" alt="spotify">
+        <h1>&nbsp資料視覺化--第一組&nbsp</h1>
         <label class="switch">
             <input type="checkbox">
             <span class="slider round" data-name="dark" onclick="darkmode()"></span>   
