--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
                 <button  data-name="pop">Popularity</button>
                 <button  data-name="genre">Genre</button>
                 <button  data-name="artist">Artist</button>
+                <button data-name="pie">Pie</button>
             </div>
 
-            <div class="bar-chart-cotainer"></div>
+            <div class="chart-cotainer"></div>
             <!-- <div class="controls">
                 <button data-name="pop">Pop</button>
                 <button data-name="genre">Genre</button>
