--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
             <script src="//unpkg.com/d3"></script>
             <script src="main.js"></script>
+            <!-- <script src="https://d3js.org/d3.v7.min.js"></script> -->
             
     </body>
 </html>
