--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
         <title></title>
         <meta name="description" content="">
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
     </head>
     <body>
         <img src="./images/spotify.jpg" alt="spotify">
-        <h1>&nbsp資料視覺化--第一組&nbsp</h1>
+        <h1>&nbspData Visualization&nbsp</h1>
+        <h2>&nbsp Group 1 &nbsp</h2>
         <label class="switch">
             <input type="checkbox">
             <span class="slider round" data-name="dark" onclick="darkmode()"></span>   
