--- a/index.html
+++ b/index.html
@@ -43,14 +43,17 @@
                 </div>
                 <div class="tip-body"></div>
             </div>
-            <div class="artist-container">
-                <p>artist picture</p>
-            </div>
         </div>
-
-            <script src="//unpkg.com/d3"></script>
-            <script src="main.js"></script>
-            <!-- <script src="https://d3js.org/d3.v7.min.js"></script> -->
+        
+        <div id="player"></div>
+        <!-- <div class="artist-container">
+            <p>artist picture</p>
+            <div id="player"></div>
+        </div> -->
+        <script src="//unpkg.com/d3"></script>
+        <script src="main.js"></script>
+        <script src="https://www.youtube.com/iframe_api"></script>
+        <script src="https://unpkg.com/d3@7.1.1/dist/d3.min.js"></script>
             
     </body>
 </html>
