ver0.6.0 youttube上架網頁完成

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 </div>
                 <div class="tip-body"></div>
             </div>
+            <div id="youtube-container"></div>
         </div>
         
-        <div id="player"></div>
         <!-- <div class="artist-container">
             <p>artist picture</p>
             <div id="player"></div>
