--- a/index.html
+++ b/index.html
@@ -45,7 +45,16 @@
                 </div>
                 <div class="tip-body"></div>
             </div>
-            <div id="youtube-container"></div>
+            <div id="youtube-container">
+                <h2 id="songTitle"></h2>
+                <p id="artistName"></p>
+                <a id="videoLink" href="#" target="_blank">影片連結</a>
+                <img id="thumbnail" src="" alt="縮圖">
+                <p id="viewCount"></p>
+                <p id="likeCount"></p>
+                <p id="commentCount"></p>
+            </div>
+
         </div>
         
         <script src="//unpkg.com/d3"></script>
