--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@
                 <div class="tip-body"></div>
             </div>
             <div id="youtube-container">
-                <h2 id="songTitle"></h2>
+                <!-- <h2 id="songTitle"></h2>
                 <p id="artistName"></p>
                 <a id="videoLink" href="#" target="_blank">影片連結</a>
                 <img id="thumbnail" src="" alt="縮圖">
                 <p id="viewCount"></p>
                 <p id="likeCount"></p>
-                <p id="commentCount"></p>
+                <p id="commentCount"></p> -->
             </div>
+        
 
         </div>
         
