修正響應式版面、刪除影片縮圖

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
                 <button id="pop" data-name="pop">Popularity</button>
                 <button id="genre" data-name="genre">Genre</button>
                 <button id="artist" data-name="artist">Artist</button>
-                <button id="switchButton" data-name="switch">Pie Chart</button>
             </div>
 
-            <div id="chart" class="chart-cotainer"></div>
+            <div id="chart" class="chart-cotainer">
+                <button id="switchButton" data-name="switch">Pie Chart</button>
+            </div>
             
             <div class="tooltip">
                 <div class="tip-header">
@@ -41,9 +42,9 @@
                 <p id="artistName"></p>
                 <!-- <a id="videoLink" href="#" target="_blank">影片連結</a> -->
                 <a id="videoLink" href="#" target="_blank"></a>
-                <h4>&nbspwatch YouTube video ⬇️⬇️⬇️&nbsp</h4>
+                <h4>&nbspwatch YouTube video ⬇⬇⬇&nbsp</h4>
                 <!-- <img id="thumbnail" src="" alt="縮圖"> -->
-                <img id="thumbnail" src="">
+                <!-- <img id="thumbnail" src=""> -->
                 <p id="viewCount"></p>
                 <p id="likeCount"></p>
                 <p id="commentCount"></p>
